# cardapio_ialemos

cardapio_lemospassos/: README.md  pyproject-old.toml  pyproject.toml  requirements.txt
cardapio_lemospassos/src/cardapio_lemospassos/: crew.py  main.py
cardapio_lemospassos/src/cardapio_lemospassos/config/: agents.yaml  tasks.yaml
cardapio_lemospassos/src/cardapio_lemospassos/files/: Gramagens Presidios_arroz_feijao.xlsx  Gramagens Presidios_opcap_proteica.xlsx  Gramagens Presidios_opcap_proteica_v2.xlsx  Gramagens Presidios_proteina_principal.xlsx  Gramagens Presidios_proteina_principal_V2.xlsx  Gramagens Presidios_saladas.xlsx  Gramagens Presidios_sobremesa.xlsx  pratos_proteina_opcao.xlsx  pratos_proteina_opcao_v2.xlsx  pratos_proteina_opcao_v3.xlsx  pratos_proteina_opcao_v5.xlsx  pratos_proteina_opcao_v6.xlsx  pratos_proteina_opcao_v7.xlsx  pratos_proteina_opcao_v8.xlsx  pratos_proteina_principal.xlsx  pratos_proteina_principal_v3.xlsx  pratos_proteina_principal_v4.xlsx  pratos_proteina_principal_v5.xlsx
cardapio_lemospassos/src/cardapio_lemospassos/tools/: custom_tool.py
